Seguridad Envio de correo

--- a/TravelExpenses/Areas/Identity/Pages/Account/CheckEmail.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/CheckEmail.cshtml
@@ -1,8 +1,10 @@
 ﻿@page
-@model ConfirmEmailModel
+@model TravelExpenses.Areas.Identity.Pages.Account.CheckEmailModel
 @{
-    ViewData["Title"] = "Confirmacion de Correo";
+    ViewData["Title"] = "Confirmar Correo";
 }
+
+
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -20,7 +22,6 @@
     <link rel="shortcut icon" href="~/Images/favicon.png" />
 </head>
 
-
 <div class="container-scroller">
     <div class="container-fluid page-body-wrapper full-page-wrapper">
         <div class="content-wrapper d-flex align-items-center auth px-0">
@@ -30,29 +31,10 @@
                         <div class="brand-logo">
                             <img src="~/Images/logo_Ozono.png" alt="logo">
                         </div>
-
-                        <h1>@ViewData["Title"]</h1>
-                        <div>
-                            <div asp-validation-summary="All" class="text-danger"></div>
-                            @{
-                                if (Model.ShowInvalid)
-                                {
-                                    <p>
-                                        Error al confirmar correo.
-                                    </p>
-                                    <p>
-                                        Si es tu usuario, Intenta actulizar tu correo.<br />
-                                        Si no es tu correo, intenta reenviar la confirmación.
-                                    </p>
-                                }
-                                else
-                                {
-                                    <p>
-                                        Gracias por confirmar su correo.
-                                    </p>
-                                }
-                            }
-                        </div>
+                        <h2>@ViewData["Title"]</h2>
+                        <p>
+                            Por favor revisar su correo para confirmar.
+                        </p>
                     </div>
                 </div>
             </div>
@@ -61,6 +43,11 @@
     </div>
     <!-- page-body-wrapper ends -->
 </div>
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
+
 
 <script src="~/vendors/base/vendor.bundle.base.js"></script>
 <!-- endinject -->
