--- a/TravelExpenses/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/Login.cshtml
@@ -35,10 +35,18 @@
                         <form id="account" method="post">
                             <hr />
                             <div asp-validation-summary="All" class="text-danger"></div>
+                            @{
+                                if (Model.ShowResend)
+                                {
+                                    <p>
+                                        <a asp-page="./UnconfirmedEmail" asp-route-userId="@Model.UserId">Resend verification?</a>
+                                    </p>
+                                }
+                            }
                             <div class="form-group">
-                                <label asp-for="Input.Email">Correo</label>
-                                <input asp-for="Input.Email" class="form-control" />
-                                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                                <label asp-for="Input.UserName">Correo</label>
+                                <input asp-for="Input.UserName" class="form-control" />
+                                <span asp-validation-for="Input.UserName" class="text-danger"></span>
                             </div>
                             <div class="form-group">
                                 <label asp-for="Input.Password">Contraseña</label>
