--- a/TravelExpenses/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/Register.cshtml
@@ -1,4 +1,5 @@
-﻿@page
+﻿
+@page
 @model RegisterModel
 @{
     ViewData["Title"] = "Registro";
@@ -35,6 +36,11 @@
                             <h4>Nuevo Usuario.</h4>
                             <hr />
                             <div asp-validation-summary="All" class="text-danger"></div>
+                            <div class="form-group">
+                                <label asp-for="Input.UserName">Nombre de Usuario</label>
+                                <input asp-for="Input.UserName" class="form-control" />
+                                <span asp-validation-for="Input.UserName" class="text-danger"></span>
+                            </div>
                             <div class="form-group">
                                 <label asp-for="Input.Email">Correo</label>
                                 <input asp-for="Input.Email" class="form-control" />
