--- a/TravelExpenses/Views/Aprobador/AprobarSolicitud.cshtml
+++ b/TravelExpenses/Views/Aprobador/AprobarSolicitud.cshtml
@@ -1,4 +1,4 @@
-﻿@model TravelExpenses.ViewModels.SolicitudesViewModel
+﻿@model TravelExpenses.ViewModels.ObservacionViewModel
 
 @{
     ViewData["Title"] = "Centro de Costos";
@@ -10,51 +10,57 @@
     <div class="card">
 
         <div class="card-body">
+            <div class="col-4">
+                <select asp-for="Estatus.IdEstatus" class="form-control input-sm" id="estatus" onchange="ObtenerSolcitudes()"
+                        asp-items="@(new SelectList(Model.Estatuses, "IdEstatus", "Status"))">
+                    <option value="">--Seleccionar estatus</option>
+                    <option value="">Todo</option>
+                </select>
+            </div>
             <div class="table-responsive">
-                <table id="data-table-basic" class="table table-striped">
+                <table id="data-table-basic" class="table table-striped" id="dtBasicExample">
                     <thead>
                         <tr>
-                            <th>
-                                Folio
-                            </th>
-                            <th>
-                                Tipo Solicitud
-                            </th>
-                            <th>
-                                Empresa
-                            </th>
-                            <th>
-                                Solicitante
-                            </th>
-                            <th>
-                                Fecha Solicitud
-                            </th>
-                            <th>
-                                Importe Solicitado
-                            </th>
-                            <th>
-                                Estatus
-                            </th>
-                            <th>
-                                Editar
-                            </th>
+                            <th>Folio</th>
+                            <th>Tipo Solicitud</th>
+                            <th>Solicitante</th>
+                            <th>Cantidad Solicitada</th>
+                            <th>Cantidad Comprobada</th>
+                            <th>Estatus</th>
+                            <th>Editar</th>
                         </tr>
                     </thead>
-                    <tbody>
+                    <tbody id="tblSolicitud">
                         @foreach (var item in Model.Solicitudes)
                         {
                             <tr>
                                 <td>@item.Folio</td>
-                                <td>@item.IdTipoSolicitud</td>
-                                <td>@item.Empresa</td>
+                                <td>@item.Descripcion</td>
                                 <td>@item.UserName</td>
-                                <td>@item.FechaSolicitud</td>
+                                <td>@item.ImporteSolicitado </td>
+                                <td>@item.ImporteComprobado </td>
+
                                 <td>@item.Estatus</td>
-                                <td>2</td>
+
+                                @*<td>@item.Folio</td>
+                                    <td>@item.IdTipoSolicitud</td>
+                                    <td>@item.Empresa</td>
+                                    <td>@item.UserName</td>
+                                    <td>@item.FechaSolicitud</td>
+                                    <td>@item.Estatus</td>*@
                                 <td>
-                                    <a class="btn btn-lg" asp-controller="Aprobador" asp-action="Aprobar" asp-route-folio="@item.Folio">
-                                        <i class="fas fa-edit"></i>
-                                    </a>
+                                    @if (item.Estatus.Equals("PorComprobar"))
+                                    {
+                                        <a class="btn btn-lg" asp-controller="Aprobador" asp-action="Detalles" asp-route-folio="@item.Folio">
+                                            <i class="fas fa-edit"></i>
+                                        </a>
+                                    }
+                                    else if (item.Estatus.Equals("PorAutorizar"))
+                                    {
+                                        <a class="btn btn-lg" asp-controller="Aprobador" asp-action="DetallesPorAutorizar" asp-route-folio="@item.Folio">
+                                            <i class="fas fa-edit"></i>
+                                        </a>
+                                    }
                                 </td>
                             </tr>
                         }
@@ -65,3 +71,79 @@
         </div>
     </div>
 </div>
+
+<script src="~/lib/jquery/dist/jquery.js"></script>
+<script type="text/javascript">
+
+    function ObtenerSolcitudes() {
+        var estatus = $("#estatus").children("option:selected").text();
+        var row = "";
+        var url = "/Aprobador/SolicitudesEstatus/";
+        $.ajax({
+            url: url,
+            data: { estatus: estatus },
+            type: "POST",
+            cache: false,
+            success: function (response) {
+                var data = [];
+                data = response;
+
+                var row = "";
+                if (data.length == 0) {
+                    row += "<tr><td colspan='9'>" + "-- No existen registros --" + "</td></tr>";
+                }
+                else {
+                    debugger;
+                    $.each(response, function (index, item) {
+                        if (item.estatus == "PorAutorizar") {
+                            row +=
+                                '<tr>' 
+                                    + '<td>' + item.folio +'</td>'
+                                    + '<td>' + item.descripcion +'</td>'
+                                    + '<td>' + item.userName +'</td>'
+                                    + '<td>' + item.importeSolicitado +'</td>'
+                                    + '<td>' + item.importeComprobado +'</td>'
+                                    + '<td>' + item.estatus+'</td>'
+                                    + '<td>'
+                                        +'<a class="btn btn-lg" href="/Aprobador/DetallesPorAutorizar?folio=' + item.folio + '">' +
+                                        +"<i class='fas fa-edit'></i>"
+                                        +'</a>' 
+                                    +'</td>'
+                                +'</tr>';
+                        }
+                        else if (item.estatus == "PorComprobar") {
+
+                            row +=
+                                '<tr>' 
+                                + '<td>' + item.folio +'</td>'
+                                + '<td>' + item.descripcion +'</td>'
+                                + '<td>' + item.userName +'</td>'
+                                + '<td>' + item.importeSolicitado +'</td>'
+                                + '<td>' + item.importeComprobado +'</td>'
+                                + '<td>' + item.estatus+'</td>'
+                                + '<td>'
+                                    +'<a class="btn btn-lg" href="/Aprobador/Detalles?folio=' + item.folio + '">' +
+                                    +"Editar"
+                                    +'</a>' 
+                                +'</td>'
+                                +'</tr>';
+                        }
+                    });
+                }
+                $("#tblSolicitud").html(row);
+
+            },
+            error: function (error) {
+                alert("unknown error: ", error);
+            }
+        });
+    }
+    // Basic example
+    $(document).ready(function () {
+        $('#dtBasicExample').DataTable({
+            "pagingType": "simple", // "simple" option for 'Previous' and 'Next' buttons only
+
+        });
+        $('.dataTables_length').addClass('bs-select');
+    });
+</script>
