--- a/TravelExpenses/Views/Politica/Edit.cshtml
+++ b/TravelExpenses/Views/Politica/Edit.cshtml
@@ -1,110 +1,132 @@
 ﻿@model TravelExpenses.ViewModels.PoliticaViewModel
 
 @if (!string.IsNullOrEmpty(Model.Politica.Nombre))
-{ <h1>@Model.Politica.Nombre</h1>
-} 
-else { <h1>Nueva Politica</h1> }
-
-
-    <div class="col-12 grid-margin stretch-card">
-        <div class="card">
-            <div class="card-body">
-                <form method="post">
-                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                    <input type="hidden" asp-for="@Model.Politica.IdPolitica " />
-                    <div class="form-group">
-                        <label class="control-label">Descripcion</label>
-                        <input asp-for=@Model.Politica.Nombre class="form-control" placeholder="Descripción" />
-                        <span asp-validation-for=@Model.Politica.Nombre class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Num Solicitudes</label>
-                        <input asp-for=@Model.Politica.NumSolicitudes class="form-control" placeholder="Número de Solicitudes Pendientes Comprobar" />
-                        <span asp-validation-for=@Model.Politica.NumSolicitudes class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Rol relacionado</label>
-                        <input asp-for=@Model.Politica.UserName class="form-control" placeholder="Rol relacionado" />
-                        <span asp-validation-for=@Model.Politica.UserName class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Mensaje Error</label>
-                        <input asp-for=@Model.Politica.MensajeError class="form-control" placeholder="Mensaje de Error a mostrar" />
-                        <span asp-validation-for=@Model.Politica.MensajeError class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Activo</label>
-                        <input asp-for=@Model.Politica.Activo class="custom-checkbox" />
-                        <span asp-validation-for=@Model.Politica.Activo class="text-danger"></span>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="float:right">
-                            <input type="submit" value="Guardar" class="btn btn-primary" />
-                        </div>
-                    </div>
-
-                    <div class="card-body">
-                        <div class="form-group">
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="float:right">
-                                    <label class="control-label">Gasto</label>
-                                    <select asp-for="Politica.IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
-                                            asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))">
-                                        <option value="">--Seleccione un Gasto</option>
-                                    </select>
-                                </div>
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="float:right">
-                                    <label class="control-label">Importe Permitido</label>
-                                    <input asp-for=Politica.ImportePermitido class="form-control" placeholder="Importe máximo permitido" />
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" >
-                                    <input type="submit" value="Agregar Concepto" class="btn btn-primary" />
-                                </div>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="card-body">
-                        <div class="table-responsive">
-                            <table class="table table-striped">
-                                <thead>
-                                    <tr>
-                                        <th>
-                                            Gasto Permitido
-                                        </th>
-                                        <th>
-                                            Importe Máximo
-                                        </th>
-                                    </tr>
-                                </thead>
-                                <tbody id="tblGastos">
-                                    @if (Model.Gastos != null && Model.Politica.Detalle != null && @Model.Gastos.Count() > 0 && Model.Politica.Detalle.Count() > 0)
-                                    {
-                                        for (int i = 0; i < Model.Politica.Detalle.Count(); i++)
-                                        {
-                                            <tr>
-                                                <td>
-                                                    <input asp-for=Politica.Detalle[i].IdGasto class="form-control" placeholder="Gasto" />
-                                                    <span class="text-danger" asp-validation-for="Gastos"></span>
-                                                </td>
-                                                <td>
-                                                    <input asp-for=Politica.Detalle[i].ImportePermitido class="form-control" placeholder="Importe máximo permitido" />
-                                                    <span asp-validation-for=Politica.Detalle[i].ImportePermitido class="text-danger"></span>
-                                                </td>
-                                            </tr>
-                                        }
-                                    }
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-
-
-                </form>
-            </div>
+{
+    <div class="row">
+        <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
+            <h1>@Model.Politica.Nombre</h1>
         </div>
-
+        <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+            <a class="btn btn-lg" asp-controller="Politica" asp-action="Lista"><i class="fas fa-arrow-left">Ir a Listado</i></a>
+        </div>
     </div>
+}
+else
+{
+    <div class="row">
+        <div class="col-lg-10 col-md-10 col-sm-12 col-xs-12">
+            <h1>Nueva Politica</h1>
+        </div>
+        <div class="col-lg-2 col-md-2 col-sm-12 col-xs-12">
+            <a class="btn btn-lg"  asp-controller="Politica" asp-action="Lista"><i class="fas fa-arrow-left">Ir a Listado</i></a>
+        </div>
+    </div>
+}
+
+<div class="col-12 grid-margin stretch-card">
+    <div class="card">
+        <div class="card-body">
+            <form method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <input type="hidden" asp-for="@Model.Politica.IdPolitica " />
+                <div class="form-group">
+                    <label class="control-label">Descripcion</label>
+                    <input asp-for=@Model.Politica.Nombre class="form-control" placeholder="Descripción" />
+                    <span asp-validation-for=@Model.Politica.Nombre class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">No. Máximo Solicitudes por Comprobar</label>
+                    <input asp-for=@Model.Politica.NumSolicitudes class="form-control" placeholder="No. Máximo Solicitudes por Comprobar" />
+                    <span asp-validation-for=@Model.Politica.NumSolicitudes class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Centro de Costo Relacionado</label>
+                    <select asp-for="@Model.Politica.ClaveCentroCosto" class="form-control input-sm" title="--Seleccione un Centro de Costo"
+                            asp-items="@(new SelectList(Model.CentroCostos, "ClaveCentroCosto", "Nombre"))">
+                        <option value="">--Seleccione un Centro de Costo</option>
+                    </select>
+
+                    <span asp-validation-for=@Model.Politica.UserName class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Mensaje Error</label>
+                    <input asp-for=@Model.Politica.MensajeError class="form-control" placeholder="Mensaje de Error a mostrar" />
+                    <span asp-validation-for=@Model.Politica.MensajeError class="text-danger"></span>
+                </div>
+                <div class="form-group">
+                    <label class="control-label">Activo</label>
+                    <input asp-for=@Model.Politica.Activo class="custom-checkbox" />
+                    <span asp-validation-for=@Model.Politica.Activo class="text-danger"></span>
+                </div>
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" style="float:right">
+                        <input type="submit" value="Guardar" class="btn btn-primary" />
+                    </div>
+                </div>
+
+                <div class="card-body">
+                    <div class="form-group">
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="float:right">
+                                <label class="control-label">Gasto</label>
+                                <select asp-for="Politica.IdGasto" class="form-control input-sm" title="--Seleccione un gasto"
+                                        asp-items="@(new SelectList(Model.Gastos, "IdGasto", "Nombre"))">
+                                    <option value="">--Seleccione un Gasto</option>
+                                </select>
+                            </div>
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12" style="float:right">
+                                <label class="control-label">Importe Permitido</label>
+                                <input asp-for=Politica.ImportePermitido class="form-control" placeholder="Importe máximo permitido" />
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                                <input type="submit" value="Agregar Concepto" class="btn btn-primary" />
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="card-body">
+                    <div class="table-responsive">
+                        <table class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>
+                                        Gasto Permitido
+                                    </th>
+                                    <th>
+                                        Importe Máximo
+                                    </th>
+                                </tr>
+                            </thead>
+                            <tbody id="tblGastos">
+                                @if (Model.Gastos != null && Model.Politica.Detalle != null && @Model.Gastos.Count() > 0 && Model.Politica.Detalle.Count() > 0)
+                                {
+                                    for (int i = 0; i < Model.Politica.Detalle.Count(); i++)
+                                    {
+                                        <tr>
+                                            <td>
+                                                <input type="hidden" asp-for="Politica.Detalle[i].IdGasto" />
+                                                <input asp-for=Politica.Detalle[i].DescripcionGasto class="form-control" placeholder="Gasto" readonly="readonly" />
+                                                <span class="text-danger" asp-validation-for="Gastos"></span>
+                                            </td>
+                                            <td>
+                                                <input asp-for=Politica.Detalle[i].ImportePermitido class="form-control" placeholder="Importe máximo permitido" readonly="readonly" />
+                                                <span asp-validation-for=Politica.Detalle[i].ImportePermitido class="text-danger"></span>
+                                            </td>
+                                        </tr>
+                                    }
+                                }
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+
+
+            </form>
+        </div>
+    </div>
+
+</div>
 
