--- a/TravelExpenses/Views/Rembolso/Details.cshtml
+++ b/TravelExpenses/Views/Rembolso/Details.cshtml
@@ -140,28 +140,28 @@
 
                             <div class="card-body">
                                 <div class="table-responsive">
-                                    <table id="data-table-basic" class="table table-striped">
+                                    <table class="table table-striped">
                                         <thead>
                                             <tr>
-                                                <th>
+                                                <th width="15%">
                                                     Descripción
                                                 </th>
-                                                <th>
+                                                <th width="15%">
                                                     Descripción SAT
                                                 </th>
-                                                <th>
+                                                <th width="10%">
                                                     Importe
                                                 </th>
-                                                <th>
+                                                <th width="10%">
                                                     Valor Unitario
                                                 </th>
-                                                <th>
+                                                <th width="5%">
                                                     Unidad
                                                 </th>
-                                                <th>
+                                                <th width="5%">
                                                     Cantidad
                                                 </th>
-                                                <th>
+                                                <th width="20%">
                                                     Gasto
                                                 </th>
                                                 <th>
