--- a/TravelExpenses/Views/Aprobador/DetallesPorAutorizar.cshtml
+++ b/TravelExpenses/Views/Aprobador/DetallesPorAutorizar.cshtml
@@ -23,24 +23,21 @@
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col"></div>
-                        <div class="col-1">
-                            <input type="submit" value="Aprobada" onclick="myFunction('1')" class="btn btn-primary" />
-                        </div>
-                        <div class="col-1">
-                            <input type="submit" value="Rechazar" onclick="myFunction('0')" class="btn btn-primary" />
-                        </div>
-                        <div class="col-1"></div>
+                <div class="form-row"><div class="col"></div>
+                    <div class="col-md-2 mb-3">
+                        <input type="submit" value="Aprobada" onclick="myFunction('1')" class="btn btn-primary" />
+                    </div>
+                    <div class="col-md-2 mb-3">
+                        <input type="submit" value="Rechazar" onclick="myFunction('0')" class="btn btn-primary" />
                     </div>
                 </div>
-
+                
             </form>
 
         </div>
     </div>
 </div>
+
 <div class="text-left">
 <div class="card">
 <div class="card-header">
