Incluir forma de pago en reembolso, correcciones en politicasy reembolsos

--- a/TravelExpenses/Views/Rembolso/Details.cshtml
+++ b/TravelExpenses/Views/Rembolso/Details.cshtml
@@ -165,7 +165,7 @@
                                                     Gasto
                                                 </th>
                                                 <th>
-                                                    Eliminar
+                                                    Borrar
                                                 </th>
                                             </tr>
                                         </thead>
