Correccio  de coreos

--- a/TravelExpenses/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/Login.cshtml
@@ -44,7 +44,7 @@
                                 }
                             }
                             <div class="form-group">
-                                <label asp-for="Input.UserName">Correo</label>
+                                <label asp-for="Input.UserName">Usuario</label>
                                 <input asp-for="Input.UserName" class="form-control" />
                                 <span asp-validation-for="Input.UserName" class="text-danger"></span>
                             </div>
