--- a/TravelExpenses/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
+++ b/TravelExpenses/Areas/Identity/Pages/Account/ResetPasswordConfirmation.cshtml
@@ -1,10 +1,52 @@
 ﻿@page
 @model ResetPasswordConfirmationModel
 @{
-    ViewData["Title"] = "Reset password confirmation";
+    ViewData["Title"] = "Confirmación de Cambio de Contraseña";
 }
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Majestic Admin</title>
+    <!-- plugins:css -->
+    <link rel="stylesheet" href="~/vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="~/vendors/base/vendor.bundle.base.css">
+    <!-- endinject -->
+    <!-- plugin css for this page -->
+    <!-- End plugin css for this page -->
+    <!-- inject:css -->
+    <link rel="stylesheet" href="~/css/style.css">
+    <!-- endinject -->
+    <link rel="shortcut icon" href="~/Images/favicon.png" />
+</head>
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Your password has been reset. Please <a asp-page="./Login">click here to log in</a>.
-</p>
+<div class="container-scroller">
+    <div class="container-fluid page-body-wrapper full-page-wrapper">
+        <div class="content-wrapper d-flex align-items-center auth px-0">
+            <div class="row w-100 mx-0">
+                <div class="col-lg-6 mx-auto">
+                    <div class="auth-form-light text-left py-5 px-4 px-sm-5">
+                        <div class="brand-logo">
+                            <img src="~/Images/logo_Ozono.png" alt="logo">
+                        </div>
+                        <h1>@ViewData["Title"]</h1>
+                        <p>
+                            Su contraseña a cambiado. Por favor <a asp-page="./Login">click aqui para iniciar sesión</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- content-wrapper ends -->
+    </div>
+    <!-- page-body-wrapper ends -->
+</div>
+
+
+
+<script src="~/vendors/base/vendor.bundle.base.js"></script>
+<!-- endinject -->
+<!-- inject:js -->
+<script src="~/js/off-canvas.js"></script>
+<script src="~/js/hoverable-collapse.js"></script>
+<script src="~/js/template.js"></script>
